win32/file.c
@@ -276,6 +276,11 @@ replace_to_long_name(wchar_t **wfullpath, size_t size, int heap)
 	return size;
     }
 
+    /* skip long name conversion if last character is a wildcard */
+    if (pos[size - 1] == L'*') {
+	return size;
+    }
+
     pos = *wfullpath + size - 1;
     while (!IS_DIR_SEPARATOR_P(*pos) && pos != *wfullpath) {
 	if (!extension_len && *pos == L'.') {
